--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "vuesax-next",
-  "version": "4.0.0",
-  "description": "Vuesax v4",
+  "name": "nova",
+  "version": "0.1.0",
+  "description": "Nova",
   "main": "index.js",
   "scripts": {
     "dev": "node scripts/dev.js",
     "docs:deploy": "sh scripts/deploy.sh"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jozef Majzel <jozefmajzel1@gmail.com>",
   "license": "ISC",
   "private": true,
   "devDependencies": {
