--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "dev": "lerna watch -- lerna run dev",
-    "lerna:dev:docs": "lerna watch --include-dependencies -- lerna run build --scope=\\$LERNA_PACKAGE_NAME & lerna run dev --scope=\"docs\""
+    "dev:components": "lerna watch --scope=\"nova\" -- lerna run build --scope=\"nova\"",
+    "dev:docs": "lerna run dev --scope=\"docs\"",
+    "dev": "npm-run-all --parallel dev:*"
   },
   "workspaces": [
     "packages/*"
   ],
-  "dependencies": {},
   "devDependencies": {
-    "lerna": "^7.3.1"
+    "lerna": "^7.3.1",
+    "npm-run-all": "^4.1.5"
   }
 }
