--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@nova/icons": "*",
+    "@oku-ui/motion-nuxt": "^0.2.1",
     "color2k": "^2.0.2",
     "motion": "^10.16.4",
     "vite-plugin-dts": "^3.6.3",
