--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -19,24 +19,24 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && vue-tsc --emitDeclarationOnly",
-    "types": "vue-tsc",
+    "build": "vite build",
+    "types": "vue-tsc --declaration --emitDeclarationOnly",
     "preview": "vite preview"
   },
   "dependencies": {
     "@nova/icons": "*",
-    "@oku-ui/motion-nuxt": "^0.2.1",
-    "color2k": "^2.0.2",
+    "@oku-ui/motion": "^0.3.4",
+    "color2k": "^2.0.3",
     "motion": "^10.16.4",
-    "vue": "^3.3.4"
+    "vue": "^3.4.21"
   },
   "devDependencies": {
-    "@types/node": "^20.2.5",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "vite-svg-loader": "^4.0.0",
-    "vite-plugin-dts": "^3.6.3",
-    "vue-tsc": "^1.8.5"
+    "@types/node": "^20.11.28",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "typescript": "^5.4.2",
+    "vite": "^5.1.6",
+    "vite-svg-loader": "^5.1.0",
+    "vite-plugin-dts": "^3.7.3",
+    "vue-tsc": "^2.0.6"
   }
 }
