deps: Rollback update of @oku-ui/motion-nuxt, because of lib export and not stable release.

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@nova/icons": "*",
-    "@oku-ui/motion": "^0.3.4",
+    "@oku-ui/motion-nuxt": "^0.2.1",
     "color2k": "^2.0.3",
     "motion": "^10.16.4",
     "vue": "^3.4.21"
