--- a/nx.json
+++ b/nx.json
@@ -1,15 +1,4 @@
 {
-  "tasksRunnerOptions": {
-    "default": {
-      "runner": "nx/tasks-runners/default",
-      "options": {
-        "cacheableOperations": [
-          "build",
-          "build-storybook"
-        ]
-      }
-    }
-  },
   "namedInputs": {
     "default": [
       "{projectRoot}/**/*"
@@ -34,7 +23,8 @@
       ],
       "outputs": [
         "{projectRoot}/dist"
-      ]
+      ],
+      "cache": true
     },
     "preview": {
       "dependsOn": [
@@ -52,7 +42,8 @@
       ],
       "outputs": [
         "{projectRoot}/dist"
-      ]
+      ],
+      "cache": true
     }
   }
 }
