--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev:icons": "lerna run build --scope=\"@nova/icons\"",
     "dev:components": "lerna watch --scope=\"@nova/components\"  -- lerna run build --scope=\"@nova/components\"",
     "dev:docs": "lerna run dev --scope=\"@nova/docs\"",
-    "dev": "npm-run-all --parallel dev:*"
+    "dev": "npm-run-all --parallel dev:*",
+    "build": "lerna run build"
   },
   "workspaces": [
     "packages/*"
