--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -21,7 +21,8 @@
     "build": "vite build && vue-tsc --emitDeclarationOnly",
     "types": "vue-tsc",
     "preview": "vite preview",
-    "icons:generate": "npx ts-node --esm ./scripts/index.mts icons"
+    "icons:generate": "npx ts-node --esm ./scripts/index.mts icons",
+    "release": "release-it"
   },
   "devDependencies": {
     "@types/node": "^20.11.28",
