--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vitepress dev",
     "build": "vitepress build",
-    "preview": "vitepress preview"
+    "preview": "vitepress preview",
+    "release": "release-it"
   },
   "author": "",
   "license": "ISC",
