--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nova/components",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2-2",
   "type": "module",
   "files": [
     "dist"
