build(release-it): Update release-it config.

--- a/packages/components/release-it.json
+++ b/packages/components/release-it.json
@@ -1,6 +1,7 @@
 {
   "git": {
-    "tag": false
+    "tag": false,
+    "requireCleanWorkingDir": false
   },
   "plugins": {
     "@release-it/bumper": {
