--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -22,7 +22,7 @@
     "build": "vite build",
     "types": "vue-tsc --declaration --emitDeclarationOnly",
     "preview": "vite preview",
-    "release": "release-it"
+    "release": "release-it --ci"
   },
   "dependencies": {
     "@nova/icons": "*",
