--- a/packages/docs/release-it.json
+++ b/packages/docs/release-it.json
@@ -1,10 +1,5 @@
 {
-  "git": {
-    "tag": false,
-    "commit": false,
-    "push": false,
-    "requireCleanWorkingDir": false
-  },
+  "git": false,
   "npm": {
     "publish": false
   }
