--- a/packages/components/release-it.json
+++ b/packages/components/release-it.json
@@ -1,10 +1,15 @@
 {
-  "git": false,
+  "git": {
+    "commitsPath": "../../",
+    "requireCleanWorkingDir": false
+  },
   "plugins": {
     "@release-it/bumper": {
       "out": {
         "file": "package.json",
-        "path": ["dependencies.@nova/icons"]
+        "path": [
+          "dependencies.@nova/icons"
+        ]
       }
     }
   }
