--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nova/icons",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "files": [
     "dist"
@@ -22,7 +22,8 @@
     "types": "vue-tsc",
     "preview": "vite preview",
     "icons:generate": "npx ts-node --esm ./scripts/index.mts icons",
-    "release": "release-it --ci"
+    "release": "release-it --ci --config ./release-it.json --git.tagExclude='*[-]*'",
+    "release:next": "release-it --ci --config ./release-it.json --npm.tag=next --preReleaseId=next"
   },
   "devDependencies": {
     "@types/node": "^20.11.28",
