--- a/release-it.json
+++ b/release-it.json
@@ -2,15 +2,15 @@
   "git": {
     "requireCleanWorkingDir": false,
     "commitMessage": "🚀 Release v${version}",
-    "changelog": "npx auto-changelog --stdout --commit-limit false -u --template https://raw.githubusercontent.com/release-it/release-it/main/templates/changelog-compact.hbs",
-    "preRelease": true
+    "changelog": "npx auto-changelog --stdout --commit-limit false -u --template https://raw.githubusercontent.com/release-it/release-it/main/templates/changelog-compact.hbs"
   },
   "npm": {
     "publish": false,
     "tag": "next"
   },
   "github": {
-    "release": true
+    "release": true,
+    "preRelease": true
   },
   "hooks": {
     "after:bump": [
