--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "dev:docs": "lerna run dev --scope=\"@nova/docs\"",
     "dev": "npm-run-all --parallel dev:*",
     "build": "lerna run build",
-    "release": "npm run release --workspaces && release-it --ci"
+    "release": "npm run release --workspaces && release-it --ci --config ./release-it.json --git.tagExclude='*[-]*'",
+    "release:next": "npm run release:next --workspaces && release-it --ci --config ./release-it.json --npm.tag=next --preReleaseId=next --github.preRelease"
   },
   "workspaces": [
-    "packages/*"
+    "packages/icons",
+    "packages/components",
+    "packages/storybook",
+    "packages/docs"
   ],
   "devDependencies": {
     "@release-it/bumper": "^6.0.1",
     "lerna": "^8.1.2",
     "npm-run-all": "^4.1.5",
     "release-it": "^17.2.0"
-  }
+  },
+  "version": "0.0.1"
 }
