--- a/packages/components/release-it.json
+++ b/packages/components/release-it.json
@@ -1,8 +1,5 @@
 {
-  "git": {
-    "commitsPath": "../../",
-    "requireCleanWorkingDir": false
-  },
+  "git": false,
   "plugins": {
     "@release-it/bumper": {
       "out": {
