--- a/release-it.json
+++ b/release-it.json
@@ -1,21 +1,20 @@
 {
   "git": {
     "requireCleanWorkingDir": false,
-    "commitMessage": "🚀 Release v${version}",
-    "changelog": "npx auto-changelog --stdout --commit-limit false -u --template https://raw.githubusercontent.com/release-it/release-it/main/templates/changelog-compact.hbs",
-    "preRelease": true
+    "commitMessage": "🚀 Release v${version}"
   },
   "npm": {
-    "publish": false,
-    "tag": "next"
+    "publish": false
   },
   "github": {
     "release": true
   },
   "hooks": {
-    "after:bump": [
-      "npx auto-changelog -p",
-      "npm run build"
-    ]
+    "after:bump": "npm run build"
+  },
+  "plugins": {
+    "@release-it/conventional-changelog": {
+      "preset": "conventionalcommits"
+    }
   }
 }
