--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,20 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "version": "0.0.0"
+  "version": "0.0.1-next.0",
+  "command": {
+    "publish": {
+      "tempTag": true
+    },
+    "version": {
+      "allowBranch": [
+        "main",
+        "develop",
+        "feature/release-ops"
+      ],
+      "conventionalCommits": true,
+      "changelog": false,
+      "forcePublish": true,
+      "message": "chore: 🚀 Release %s"
+    }
+  }
 }
