--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nova-org/components",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.1-next.0",
   "type": "module",
   "files": [
     "dist"
@@ -26,7 +26,7 @@
     "release:next": "release-it --ci --config ./release-it.json --preRelease=next"
   },
   "dependencies": {
-    "@nova-org/icons": "*",
+    "@nova-org/icons": "^0.0.1-next.0",
     "@oku-ui/motion-nuxt": "^0.2.1",
     "color2k": "^2.0.3",
     "motion": "^10.16.4",
@@ -37,8 +37,8 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "typescript": "^5.4.2",
     "vite": "^5.1.6",
-    "vite-svg-loader": "^5.1.0",
     "vite-plugin-dts": "^3.7.3",
+    "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^2.0.6"
   }
 }
