--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nova-org/docs",
-  "version": "0.0.1",
+  "version": "0.0.1-next.0",
   "description": "",
   "scripts": {
     "dev": "vitepress dev",
@@ -16,10 +16,10 @@
     "vitepress": "^1.1.0"
   },
   "dependencies": {
-    "@nova-org/components": "*",
-    "@nova-org/icons": "*",
-    "motion": "^10.16.4",
-    "@oku-ui/motion-nuxt": "^0.2.1"
+    "@nova-org/components": "^0.0.1-next.0",
+    "@nova-org/icons": "^0.0.1-next.0",
+    "@oku-ui/motion-nuxt": "^0.2.1",
+    "motion": "^10.16.4"
   },
   "peerDependencies": {
     "vue": "^3.4.21"
