--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nova-org/icons",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.1-next.0",
   "type": "module",
   "files": [
     "dist"
