--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nova-org/storybook",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.1-next.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
