--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "npm-run-all --parallel dev:*",
     "build": "lerna run build",
     "release": "npm run release --workspaces && release-it --ci --config ./release-it.json --git.tagExclude='*[-]*'",
-    "release:next": "npm run release:next --workspaces && release-it --ci --config ./release-it.json --preRelease=next"
+    "release:next": "npm run release:next --workspaces && release-it --ci --config ./release-it.json --preRelease=next",
+    "release:lerna": "lerna version --yes",
+    "release:lerna:next": "lerna version prerelease --yes --preid next"
   },
   "workspaces": [
     "packages/icons",
