--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "dev:docs": "lerna run dev --scope=\"@nova-org/docs\"",
     "dev": "npm-run-all --parallel dev:*",
     "build": "lerna run build",
-    "release": "npm run release --workspaces && release-it --ci --config ./release-it.json --git.tagExclude='*[-]*'",
-    "release:next": "npm run release:next --workspaces && release-it --ci --config ./release-it.json --preRelease=next",
-    "release:lerna": "lerna version --yes",
-    "release:lerna:next": "lerna version prerelease --yes --preid next",
-    "publish:lerna": "lerna publish from-package"
+    "release": "lerna version --yes",
+    "release:next": "lerna version prerelease --yes --preid next",
+    "publish": "lerna publish from-package --yes"
   },
   "workspaces": [
     "packages/icons",
@@ -21,10 +19,7 @@
     "packages/docs"
   ],
   "devDependencies": {
-    "@release-it/bumper": "^6.0.1",
-    "@release-it/conventional-changelog": "^8.0.1",
     "lerna": "^8.1.2",
-    "npm-run-all": "^4.1.5",
-    "release-it": "^17.2.0"
+    "npm-run-all": "^4.1.5"
   }
 }
