--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -24,9 +24,7 @@
     "dev": "vite",
     "build": "vite build",
     "types": "vue-tsc --declaration --emitDeclarationOnly",
-    "preview": "vite preview",
-    "release": "release-it --ci --config ./release-it.json --git.tagExclude='*[-]*'",
-    "release:next": "release-it --ci --config ./release-it.json --preRelease=next"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@nova-org/icons": "^0.0.1-next.0",
