chore: Update name.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,7 +29,7 @@ concurrency:
 
 jobs:
   release:
-    name: "Release Nova @next"
+    name: "Release Nova"
     runs-on: ubuntu-latest
 
     steps:
