--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -45,8 +45,11 @@ jobs:
           node-version: 20
           cache: npm
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Build
-        run: yarn build
+        run: npm build
 
       - name: Extract branch name
         shell: bash
@@ -58,9 +61,6 @@ jobs:
           git config --global user.name "$MAINTAINER_NAME"
           git config --global user.email "$MAINTAINER_MAIL"
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" >> .npmrc
-
-      - name: Install dependencies
-        run: npm ci
 
       - name: Bump version @next
         if: ${{ github.event_name == 'push' || steps.extract_branch.outputs.branch == 'develop' }}
