build: Replace GH_TOKEN with GITHUB_TOKEN.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
 
       - name: Setup Node
@@ -68,20 +68,20 @@ jobs:
         run: npm run release:next
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          GIT_USER: "$MAINTAINER_MAIL:${{ secrets.GH_TOKEN }}"
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GIT_USER: "$MAINTAINER_MAIL:${{ secrets.GITHUB_TOKEN }}"
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Bump version @${{ github.event.inputs.version }}
         if: ${{ github.event_name == 'workflow_dispatch' && steps.extract_branch.outputs.branch != 'develop' }}
         run: npm run release -- ${{ github.event.inputs.version }}
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          GIT_USER: "$MAINTAINER_MAIL:${{ secrets.GH_TOKEN }}"
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GIT_USER: "$MAINTAINER_MAIL:${{ secrets.GITHUB_TOKEN }}"
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish packages
         run: npm run publish
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          GIT_USER: "$MAINTAINER_MAIL:${{ secrets.GH_TOKEN }}"
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GIT_USER: "$MAINTAINER_MAIL:${{ secrets.GITHUB_TOKEN }}"
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
