--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -34,12 +34,13 @@
     "vue": "^3.4.21"
   },
   "devDependencies": {
-    "@types/node": "^20.11.28",
+    "@types/node": "^20.12.11",
     "@vitejs/plugin-vue": "^5.0.4",
-    "typescript": "^5.4.2",
-    "vite": "^5.1.6",
-    "vite-plugin-dts": "^3.7.3",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11",
+    "vite-plugin-dts": "^3.9.1",
     "vite-svg-loader": "^5.1.0",
-    "vue-tsc": "^2.0.6"
+    "vue-tsc": "^2.0.17"
   }
 }
