build(@nova-org/components): Export also variables.scss, so it can be easily reused by application using this lib.

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -17,7 +17,8 @@
       "import": "./dist/nova.js",
       "require": "./dist/nova.umd.cjs"
     },
-    "./style.css": "./dist/style.css"
+    "./style.css": "./dist/style.css",
+    "./scss/index.variables.scss": "./dist/scss/index.variables.scss"
   },
   "types": "./dist/index.d.ts",
   "scripts": {
