--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,6 +1,13 @@
 {
   "name": "@nova-org/storybook",
   "private": true,
+  "author": "Jozef Majzel <jozefmajzel1@gmail.com>",
+  "homepage": "https://novaui-org.github.io/nova/",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/novaui-org/nova.git",
+    "directory": "packages/storybook"
+  },
   "version": "0.0.1-next.1",
   "type": "module",
   "scripts": {
