--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -8,6 +8,7 @@
     "url": "git+https://github.com/novaui-org/nova.git",
     "directory": "packages/icons"
   },
+  "license": "MIT",
   "publishConfig": {
     "access": "public"
   },
