--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -8,6 +8,7 @@
     "url": "git+https://github.com/novaui-org/nova.git",
     "directory": "packages/storybook"
   },
+  "license": "MIT",
   "version": "0.0.1-next.1",
   "type": "module",
   "scripts": {
