--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -23,8 +23,7 @@
   "dependencies": {
     "@nova-org/components": "^0.0.1-next.2",
     "@nova-org/icons": "^0.0.1-next.2",
-    "@oku-ui/motion-nuxt": "^0.2.1",
-    "motion": "^10.16.4"
+    "@oku-ui/motion": "^0.3.4"
   },
   "peerDependencies": {
     "vue": "^3.4.21"
