--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "version": "0.0.1-next.5",
+  "version": "0.0.1",
   "command": {
     "publish": {
       "tempTag": true
