--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -12,7 +12,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "0.0.1-next.5",
+  "version": "0.0.1",
   "type": "module",
   "files": [
     "dist"
@@ -36,7 +36,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@nova-org/icons": "^0.0.1-next.5",
+    "@nova-org/icons": "^0.0.1",
     "@oku-ui/motion": "^0.3.4",
     "color2k": "^2.0.3",
     "vue": "^3.4.21"
