--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "sass": "^1.79.4",
+    "vite-plugin-static-copy": "^2.0.0",
     "vitepress": "^1.3.4"
   },
   "dependencies": {
