--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "@nova-org/components": "^0.1.1",
     "@nova-org/icons": "^0.1.1",
-    "@oku-ui/motion": "^0.3.4"
+    "@oku-ui/motion": "^0.3.4",
+    "vite-plugin-static-copy": "^2.0.0"
   },
   "peerDependencies": {
     "vue": "^3.5.11"
