chore: update nx.json

--- a/nx.json
+++ b/nx.json
@@ -10,8 +10,8 @@
   "targetDefaults": {
     "dev": {
       "dependsOn": [
-        "^dev",
-        "^build"
+        "^build",
+        "^dev"
       ],
       "inputs": [
         "default"
