--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -12,7 +12,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "0.1.1",
+  "version": "0.1.2-next.0",
   "type": "module",
   "files": [
     "dist"
