--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nova-org/storybook",
   "private": true,
-  "version": "0.1.1",
+  "version": "0.1.2-next.0",
   "author": "Jozef Majzel <jozefmajzel1@gmail.com>",
   "homepage": "https://novaui-org.github.io/nova/",
   "repository": {
